--- a/KNH/Let's get it_JS/10-text-rpg.html
+++ b/KNH/Let's get it_JS/10-text-rpg.html
@@ -6,11 +6,13 @@
 </head>
 
 <body>
+    <!-- 주인고 이름설정 -->
     <form id="start-screen">
         <input id="name-input" placeholder="주인공 이름을 입력하세요!" />
         <button id="start">시작</button>
     </form>
     <div id="screen">
+        <!-- 주인공 상태 -->
         <div id="hero-stat">
             <span id="hero-name"></span>
             <span id="hero-level"></span>
@@ -18,6 +20,7 @@
             <span id="hero-xp"></span>
             <span id="hero-att"></span>
         </div>
+        <!-- 일반 메뉴 -->
         <form id="game-menu" style="display: none;">
             <div id="menu-1">1.모험</div>
             <div id="menu-2">2.휴식</div>
@@ -25,6 +28,7 @@
             <input id="menu-input" />
             <button id="menu-button">입력</button>
         </form>
+        <!-- 전투 메뉴 -->
         <form id="battle-menu" style="display: none;">
             <div id="battle-1">1.공격</div>
             <div id="battle-2">2.회복</div>
@@ -33,12 +37,15 @@
             <button id="battle-button">입력</button>
         </form>
         <div id="message"></div>
+        <!-- 적의 상태 -->
         <div id="monster-stat">
             <span id="monster-name"></span>
             <span id="monster-hp"></span>
             <span id="monster-att"></span>
         </div>
     </div>
+
+    <!-- 화면과 데이터 바꾼 것을 꼭 같이 해라! -->
     <script>
         const $startScreen = document.querySelector('#start-screen');
         const $gameMenu = document.querySelector('#game-menu');
@@ -53,6 +60,7 @@
         const $monsterAtt = document.querySelector('#monster-att');
         const $message = document.querySelector('#message');
 
+        // 히어로 객체 만들기
         const hero = {
             name: '',
             lev: 1,
@@ -70,6 +78,7 @@
             },
         };
         let monster = null;
+        // 밑에 몬스터 리스트 만들어주고 위 변수에 이름값 넣어주기
         const monsterList = [
             { name: '슬라임', hp: 25, att: 10, xp: 10 },
             { name: '스켈레톤', hp: 50, att: 15, xp: 20 },
@@ -81,6 +90,7 @@
             const name = event.target['name-input'].value;
             $startScreen.style.display = 'none';
             $gameMenu.style.display = 'block';
+            // 초기 데이터 
             $heroName.textContent = name;
             $heroLevel.textContent = `${hero.lev}Lev`;
             $heroHp.textContent = `HP: ${hero.hp}/${hero.maxHp}`;
@@ -89,16 +99,27 @@
             hero.name = name;
         });
 
+        // 게임 메뉴
         $gameMenu.addEventListener('submit', (event) => {
             event.preventDefault();
             const input = event.target['menu-input'].value;
             if (input === '1') { // 모험
                 $gameMenu.style.display = 'none';
                 $battleMenu.style.display = 'block';
+                // 객체를 변수에 대입할 때는 복사해야하는지, 참조해야하는지 잘 알아야한다.
+                // 얉은 복사는 겉 껍대기만 참조가 끊기고 겉복사 내부 참조, 깊은 복사는 모든 참조가 끊기고 다 복사
+                // JSON.parse(JSON.stringify(객체)) : 객체를 깊은 복사할 때 사용
+                // { ...monster[0] } : 객체를 얉은 복사할 때 사용
+                // JSON.parse(JSON.stringify(arr)) : 객체를 깊은 복사할 때 사용
+                // [...arr] : 배열을 얉은 복사할 때 사용
+                // 실무에서는 lodash 같은 클론 라이브러리 사용
+
+                // 이번 경우, 만들어 둔 몬스터 객체를 계속 써야하는데 참조를 하면 상태가 바뀌면 안되니까 깊은 복사를 했다. 
                 monster = JSON.parse(
                     JSON.stringify(monsterList[Math.floor(Math.random() * monsterList.length)])
                 );
                 monster.maxHp = monster.hp;
+                // 몬스터 정보란
                 $monsterName.textContent = monster.name;
                 $monsterHp.textContent = `HP: ${monster.hp}/${monster.maxHp}`;
                 $monsterAtt.textContent = `ATT: ${monster.att}`;
@@ -107,6 +128,7 @@
             }
         });
 
+        // 배틀 메뉴
         $battleMenu.addEventListener('submit', (event) => {
             const input = event.target['battle-input'].value;
             if (input === '1') { // 공격
